added the first second and third blog and css file and incremental code

--- a/index.html
+++ b/index.html
@@ -1,11 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+    <div class="B">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>This is my first github repository</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    
+    <h1>Developer Blogs</h1>
+    <div class="A">
+    <h2>My first blog</h2>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae eius dolor autem facere id odit, enim explicabo saepe fugiat, eos architecto voluptates perferendis blanditiis a obcaecati soluta. Voluptatum, odio animi.</p>
+</div>
+<br>
+<div class="A">
+    <h2>My second blog</h2>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae eius dolor autem facere id odit, enim explicabo saepe fugiat, eos architecto voluptates perferendis blanditiis a obcaecati soluta. Voluptatum, odio animi.</p>
+</div>
+<br>
+<div class="A">
+    <h2>My third blog</h2>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae eius dolor autem facere id odit, enim explicabo saepe fugiat, eos architecto voluptates perferendis blanditiis a obcaecati soluta. Voluptatum, odio animi.</p>
+</div>
+<br>
+<div class="C">
+    <h2>How to push incremental code</h2>
+<ul type="square">
+    <li>git add.</li>
+    <li>git commit -m 'write meaning full sentence'</li>
+    <li>git push</li>
+</ul>
+</div>
+</div>
 </body>
-</html>
+</html> 
